# coala

./: CMakeLists.txt  README.md
Allocation/: CMakeLists.txt
Allocation/BLAS/: CMakeLists.txt
Allocation/BLAS/base/include/: coala_blas_base.h
Allocation/BLAS/base/src/: coala_blas_base.c
Allocation/BLAS/level2/: CMakeLists.txt
Allocation/BLAS/level2/gemv/include /: coala_blas_gemv.h
Allocation/BLAS/level2/gemv/src/: coala_blas_dgemv.c  coala_blas_sgemv.c
Allocation/BLAS/level3/: CMakeLists.txt
Allocation/BLAS/level3/gemm/include/: coala_blas_gemm.h
Allocation/BLAS/level3/gemm/src/: coala_blas_dgemm.c  coala_blas_sgemm.c
Lazy/: CMakeLists.txt
Lazy/MLP/: makefile
Lazy/MLP/include/: coala_mlp_activate.h  coala_mlp_activation.h  coala_mlp_blas.h  coala_mlp_cost.h  coala_mlp_graph.h  coala_mlp_initialization.h  coala_mlp_initialize.h  coala_mlp_loss.h  coala_mlp_model.h  coala_mlp_node.h  coala_mlp_node_op.h  coala_mlp_node_va.h  coala_mlp_node_var.h  coala_mlp_tensor.h
Lazy/MLP/include /: coala_mlp_activation.h  coala_mlp_blas.h  coala_mlp_initialization.h  coala_mlp_layer.h  coala_mlp_loss.h  coala_mlp_model.h
Lazy/MLP/sampling/sampling_blas_gemm/sampling_openblas_gemm/: openblas_gemm_testdata.c  openblas_gemm_trainingdata.c
Lazy/MLP/sampling/sampling_sysinfo_settings/: coala_mlp_sampling_sysinfo.h
Lazy/MLP/src/: coala_mlp_activate.cpp  coala_mlp_activation.cpp  coala_mlp_blas.cpp  coala_mlp_cost.cpp  coala_mlp_graph.cpp  coala_mlp_initialization.cpp  coala_mlp_initialize.cpp  coala_mlp_layer.cpp  coala_mlp_loss.cpp  coala_mlp_model.cpp  coala_mlp_node.cpp  coala_mlp_node_op.cpp  coala_mlp_node_va.cpp  coala_mlp_node_var.cpp
Lazy/Memops/: CMakeLists.txt
Lazy/Memops/include/: coala_memop_dev2host.h  coala_memop_devfree.h  coala_memop_devmalc.h  coala_memop_host2dev.h
Lazy/Memops/src/: coala_memop_dev2host.c  coala_memop_devfree.c  coala_memop_devmalc.c  coala_memop_host2dev.c
Lazy/PloyRegr/: Makefile
Lazy/PloyRegr/include/: coala_rgsnn_hypothesis.h  coala_rgsnn_loss.h
Lazy/PloyRegr/sampling/sampling_blas_gemm/sampling_openblas_gemm/: Makefile
Lazy/PloyRegr/sampling/sampling_sysinfo_settings/: sampling_sysinfo_settings.h
Lazy/PloyRegr/src/: coala_rgsnn_hypothesis.c  coala_rgsnn_loss.c
Lazy/Probes/: CMakeLists.txt
Lazy/Probes/include/: coala_probes_probe.h  coala_probes_probelist.h  coala_probes_structure.h
Lazy/Probes/src/: coala_probes_probe.c  coala_probes_probelist.c
Lazy/RegressionNN/include/: coala_rgsnn_data.h  coala_rgsnn_gradientdescent.h  coala_rgsnn_structure.h
Lazy/RegressionNN/sampling/sampling_blas_gemm/sampling_openblas_gemm/: openblas_gemm_trainingdata.c
Lazy/RegressionNN/src/: coala_rgsnn_data.c  coala_rgsnn_gradientdescent.c
Lazy/RegressionNN/test/: Makefile  main.c
Pass/: CMakeLists.txt
Pass/TaskReconstruction/: CMakeLists.txt  coala_tr_entrance.cpp
Pass/TaskReconstruction/Cornerstone/: CMakeLists.txt
Pass/TaskReconstruction/Cornerstone/include/: coala_cornerstone_probes.h  coala_cornerstone_task.h  coala_cornerstone_taskgraph.h  coala_cornerstone_utils.h
Pass/TaskReconstruction/Cornerstone/src/: coala_cornerstone_graph.cpp  coala_cornerstone_probes.cpp  coala_cornerstone_utils.cpp
Pass/TaskReconstruction/HandleTraverse/: CMakeLists.txt
Pass/TaskReconstruction/HandleTraverse/include/: coala_traverse_entrance.h  coala_traverse_implement.h
Pass/TaskReconstruction/HandleTraverse/src/: coala_traverse_entrance.cpp  coala_traverse_implement.cpp
Pass/TaskReconstruction/MngLibraries/: CMakeLists.txt
Pass/TaskReconstruction/MngLibraries/mngBLAS/: CMakeLists.txt
Pass/TaskReconstruction/MngLibraries/mngBLAS/entrance/: CMakeLists.txt
Pass/TaskReconstruction/MngLibraries/mngBLAS/entrance/include/: coala_blas_entrance.h  coala_blas_list.h  coala_blas_management.h  coala_blas_task.h
Pass/TaskReconstruction/MngLibraries/mngBLAS/entrance/src/: coala_blas_entrance.cpp  coala_blas_list.cpp  coala_blas_management.cpp  coala_blas_task.cpp
Pass/TaskReconstruction/MngLibraries/mngBLAS/level3/: CMakeLists.txt
Pass/TaskReconstruction/MngLibraries/mngBLAS/level3/gemm/: coala_blas_gemm_task.cpp  coala_blas_gemm_task.h  coala_blas_gemm_task_for_cblas.cpp  coala_blas_gemm_task_for_cblas.h  coala_blas_gemm_task_for_clblast.cpp  coala_blas_gemm_task_for_clblast.h  coala_blas_gemm_task_for_cublas.cpp  coala_blas_gemm_task_for_cublas.h
Pass/TaskReconstruction/MngMemory/: CMakeLists.txt
Pass/TaskReconstruction/MngMemory/include/: coala_memop_datamigr.h  coala_memop_datamigr_d2d.h  coala_memop_datamigr_d2h.h  coala_memop_datamigr_h2d.h  coala_memop_devfree.h  coala_memop_devmalc.h  coala_memop_hostfree.h  coala_memop_hostmalc.h  coala_memop_list.h
Pass/TaskReconstruction/MngMemory/src/: coala_memop_datamigr_d2d.cpp  coala_memop_datamigr_d2h.cpp  coala_memop_datamigr_h2d.cpp  coala_memop_datatmigr.cpp  coala_memop_devfree.cpp  coala_memop_devmalc.cpp  coala_memop_hostfree.cpp  coala_memop_hostmalc.cpp  coala_memop_list.cpp
Test/: Makefile  cublas_sgemm.c  openblas_sgemm.c
Test/Demo/: cublas_gemm.c  cublas_gemm.h  demo.c  makefile
Test/Test/: Makefile  clblast_dgemm.c  clblast_sgemm.c  cublas_dgemm.c  cublas_sgemm.c  openblas_dgemm.c
